--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '1235593665172922');
+fbq('init', '2057878985044607');
 fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=1235593665172922&ev=PageView&noscript=1"/></noscript>
+src="https://www.facebook.com/tr?id=2057878985044607&ev=PageView&noscript=1"
+/></noscript>
 <!-- End Meta Pixel Code -->
-
 <body>
   <main>
     <h1>HAJI SHOAIB KHAN</h1>
